--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <!-- MENU BARU -->
                 <a href="#" class="menu-item flex items-center px-2 py-2 mb-2 rounded-xl text-gray-400" data-page="marketplace">
                     <i data-lucide="wrench" class="w-4 h-4"></i>
-                    <span class="ml-2 font-medium menu-text text-sm">Marketplace Sewa Alat</span>
+                    <span class="ml-2 font-medium menu-text text-sm">Marketplace</span>
                 </a>
                 <a href="#" class="menu-item flex items-center px-2 py-2 mb-2 rounded-xl text-gray-400" data-page="faq">
                     <i data-lucide="help-circle" class="w-4 h-4"></i>
