--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <div id="logo-text">
                             <h1 class="text-lg font-bold text-amber-400">BossX</h1>
-                            <p class="text-xs text-gray-400">Crypto Exchange</p>
+                            <p class="text-xs text-gray-400">Masternode</p>
                         </div>
                     </div>
                     <button id="toggle-sidebar" class="text-gray-400 hover:text-amber-400 p-1 rounded">
