--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@
                                         Auto claim in: <span id="auto-claim-timer" class="auto-claim-timer">--</span>s
                                     </p>
                                     <button class="node-button convert-button" onclick="convertToUSDT()">
-                                        Convert To USDT
+                                        SWAP To USDT
                                     </button>
                                 </div>
                             </div>
