--- a/index.html
+++ b/index.html
@@ -8,165 +8,130 @@
   <script src="https://cdn.jsdelivr.net/npm/tronweb@latest/dist/TronWeb.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', system-ui, sans-serif; }
-    .bottom-nav { position: fixed; bottom: 0; left: 0; right: 0; }
+    body { font-family: 'Inter', system-ui, sans-serif; max-width: 420px; margin: 0 auto; }
+    .asset-logo { width: 48px; height: 48px; object-fit: contain; }
   </style>
 </head>
 <body class="bg-gray-950 text-white min-h-screen pb-20">
 
   <!-- Header -->
-  <header class="bg-gray-900 border-b border-gray-800 px-6 py-4 flex items-center justify-between">
+  <header class="bg-gray-900 px-5 py-4 flex items-center justify-between border-b border-gray-800">
     <div class="flex items-center gap-3">
-      <div class="w-9 h-9 bg-yellow-500 rounded-2xl flex items-center justify-center text-black font-bold text-2xl">B</div>
-      <div>
-        <h1 class="text-2xl font-bold">BossX Wallet Pro</h1>
-        <p class="text-xs text-gray-400">TRON Network</p>
-      </div>
+      <div class="w-8 h-8 bg-yellow-500 rounded-2xl flex items-center justify-center text-black font-bold">B</div>
+      <h1 class="text-xl font-bold">BossX Wallet Pro</h1>
     </div>
-    <button onclick="connectWallet()" class="px-5 py-2 bg-blue-600 hover:bg-blue-700 rounded-2xl text-sm font-semibold flex items-center gap-2">
-      <i class="fas fa-wallet"></i> Connect
-    </button>
+    <button onclick="connectWallet()" class="text-sm bg-blue-600 hover:bg-blue-700 px-5 py-2 rounded-2xl">Connect</button>
   </header>
 
-  <div class="p-6">
-    <!-- Balance Card -->
-    <div class="bg-gradient-to-br from-yellow-600 to-orange-600 rounded-3xl p-8 text-center mb-8">
-      <p class="text-yellow-100 text-sm">Total Balance</p>
-      <p id="totalBalance" class="text-5xl font-bold mt-2">$0.00</p>
-      <p id="addressDisplay" class="text-xs mt-4 font-mono bg-black/30 inline-block px-4 py-1 rounded-full">Belum terhubung</p>
+  <div class="p-5">
+    <!-- Balance -->
+    <div class="bg-gradient-to-br from-yellow-600 to-amber-600 rounded-3xl p-8 text-center mb-8">
+      <p class="text-yellow-100 text-sm tracking-widest">TOTAL BALANCE</p>
+      <p id="totalBalance" class="text-5xl font-bold mt-3">$0.00</p>
+      <p id="addressDisplay" class="mt-4 text-xs font-mono bg-black/30 px-4 py-1.5 rounded-full inline-block">0x... belum terhubung</p>
     </div>
 
     <!-- Energy & Bandwidth -->
     <div class="grid grid-cols-2 gap-4 mb-8">
       <div class="bg-gray-900 rounded-3xl p-5">
         <p class="text-gray-400 text-sm">Energy</p>
-        <p class="text-2xl font-bold">0 / 5000</p>
-        <div class="h-2 bg-gray-700 rounded-full mt-3"><div class="h-2 w-1/3 bg-yellow-500 rounded-full"></div></div>
+        <p class="text-2xl font-bold mt-1">0 <span class="text-sm font-normal text-gray-400">/ 5000</span></p>
+        <div class="h-2 bg-gray-700 rounded mt-3"><div class="h-2 bg-yellow-500 rounded w-1/3"></div></div>
       </div>
       <div class="bg-gray-900 rounded-3xl p-5">
         <p class="text-gray-400 text-sm">Bandwidth</p>
-        <p class="text-2xl font-bold">600 / 600</p>
-        <div class="h-2 bg-gray-700 rounded-full mt-3"><div class="h-2 w-full bg-green-500 rounded-full"></div></div>
+        <p class="text-2xl font-bold mt-1">600 <span class="text-sm font-normal text-gray-400">/ 600</span></p>
+        <div class="h-2 bg-gray-700 rounded mt-3"><div class="h-2 bg-green-500 rounded w-full"></div></div>
       </div>
     </div>
 
     <!-- Quick Actions -->
     <div class="grid grid-cols-4 gap-4 mb-10">
-      <button onclick="showSendModal()" class="flex flex-col items-center gap-1 text-yellow-400">
-        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-2xl">↑</div>
+      <button onclick="showSend()" class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-3xl mb-1">↑</div>
         <span class="text-xs">Send</span>
       </button>
-      <button onclick="showReceiveModal()" class="flex flex-col items-center gap-1 text-yellow-400">
-        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-2xl">↓</div>
+      <button onclick="showReceive()" class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-3xl mb-1">↓</div>
         <span class="text-xs">Receive</span>
       </button>
-      <button class="flex flex-col items-center gap-1 text-yellow-400">
-        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-2xl">↔</div>
+      <button class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-3xl mb-1">↔</div>
         <span class="text-xs">Swap</span>
       </button>
-      <button class="flex flex-col items-center gap-1 text-yellow-400">
-        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-2xl">⭐</div>
+      <button class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-gray-800 rounded-2xl flex items-center justify-center text-3xl mb-1">⭐</div>
         <span class="text-xs">Stake</span>
       </button>
     </div>
 
     <!-- Assets -->
-    <h3 class="font-semibold mb-4 flex items-center justify-between">
-      Assets <span class="text-xs text-gray-400">TRON Network</span>
-    </h3>
+    <h3 class="font-semibold mb-4 px-1">Your Assets</h3>
     <div id="assetsList" class="space-y-3"></div>
   </div>
 
   <!-- Bottom Navigation -->
-  <div class="bottom-nav bg-gray-900 border-t border-gray-800 py-2">
-    <div class="flex justify-around text-xs">
-      <div onclick="setActiveNav(0)" class="nav-item flex flex-col items-center text-yellow-400">
-        <i class="fas fa-home text-2xl"></i><span>Home</span>
+  <div class="fixed bottom-0 left-0 right-0 max-w-[420px] mx-auto bg-gray-900 border-t border-gray-800 py-3">
+    <div class="flex justify-around text-[10px]">
+      <div class="flex flex-col items-center text-yellow-400">
+        <i class="fas fa-home text-2xl"></i>
+        <span>Home</span>
       </div>
-      <div onclick="setActiveNav(1)" class="nav-item flex flex-col items-center text-gray-400">
-        <i class="fas fa-coins text-2xl"></i><span>Assets</span>
+      <div class="flex flex-col items-center text-gray-400">
+        <i class="fas fa-coins text-2xl"></i>
+        <span>Assets</span>
       </div>
-      <div onclick="setActiveNav(2)" class="nav-item flex flex-col items-center text-gray-400">
-        <i class="fas fa-history text-2xl"></i><span>Activity</span>
+      <div class="flex flex-col items-center text-gray-400">
+        <i class="fas fa-history text-2xl"></i>
+        <span>Activity</span>
       </div>
-      <div onclick="setActiveNav(3)" class="nav-item flex flex-col items-center text-gray-400">
-        <i class="fas fa-globe text-2xl"></i><span>DApps</span>
+      <div class="flex flex-col items-center text-gray-400">
+        <i class="fas fa-globe text-2xl"></i>
+        <span>DApps</span>
       </div>
-      <div onclick="setActiveNav(4)" class="nav-item flex flex-col items-center text-gray-400">
-        <i class="fas fa-ellipsis-h text-2xl"></i><span>More</span>
+      <div class="flex flex-col items-center text-gray-400">
+        <i class="fas fa-ellipsis-h text-2xl"></i>
+        <span>More</span>
       </div>
     </div>
   </div>
 
   <script>
-    let currentAddress = null;
-    let tronWebInstance = null;
-
     const assets = [
-      { icon: "🔶", name: "TRX", balance: "0", usd: "0" },
-      { icon: "💵", name: "USDT", balance: "0", usd: "0" },
-      { icon: "⭐", name: "BossX", balance: "0", usd: "0" },
-      { icon: "₿", name: "BTC", balance: "0", usd: "0" },
-      { icon: "◎", name: "SOL", balance: "0", usd: "0" }
+      { name: "TRX", logo: "https://cryptologos.cc/logos/tron-trx-logo.png", balance: "124.85", usd: "18.72" },
+      { name: "USDT", logo: "https://cryptologos.cc/logos/tether-usdt-logo.png", balance: "245.00", usd: "245.00" },
+      { name: "BossX", logo: "https://via.placeholder.com/48x48/FFD700/000000?text=BX", balance: "12,450", usd: "124.50" },
+      { name: "BTC", logo: "https://cryptologos.cc/logos/bitcoin-btc-logo.png", balance: "0.0042", usd: "248.30" },
+      { name: "SOL", logo: "https://cryptologos.cc/logos/solana-sol-logo.png", balance: "8.75", usd: "142.60" }
     ];
 
     function renderAssets() {
       const container = document.getElementById('assetsList');
-      container.innerHTML = assets.map(a => `
-        <div class="bg-gray-900 rounded-3xl p-5 flex items-center justify-between">
-          <div class="flex items-center gap-4">
-            <span class="text-3xl">${a.icon}</span>
-            <div>
-              <p class="font-semibold">${a.name}</p>
-              <p class="text-xs text-gray-400">TRC20</p>
-            </div>
+      container.innerHTML = assets.map(asset => `
+        <div class="bg-gray-900 rounded-3xl p-4 flex items-center gap-4">
+          <img src="${asset.logo}" class="asset-logo rounded-xl" alt="${asset.name}">
+          <div class="flex-1">
+            <p class="font-semibold">${asset.name}</p>
+            <p class="text-xs text-gray-400">TRC20 • Available</p>
           </div>
           <div class="text-right">
-            <p class="font-bold">${a.balance} ${a.name}</p>
-            <p class="text-xs text-gray-400">$${a.usd}</p>
+            <p class="font-bold">${asset.balance} ${asset.name}</p>
+            <p class="text-xs text-gray-400">$${asset.usd}</p>
           </div>
         </div>
       `).join('');
     }
 
-    async function createWalletDemo() {
-      if (!tronWebInstance) tronWebInstance = new TronWeb({ fullHost: 'https://api.trongrid.io' });
-      const wallet = await TronWeb.createRandom();
-      currentAddress = wallet.address.base58;
-      document.getElementById('addressDisplay').textContent = currentAddress.slice(0,8) + '...' + currentAddress.slice(-6);
-      alert("Wallet berhasil dibuat!\n\nSeed Phrase: " + wallet.mnemonic.phrase + "\n\nSimpan dengan aman!");
-    }
-
     function connectWallet() {
-      if (confirm("Ingin generate wallet baru?")) {
-        createWalletDemo();
-      } else {
-        alert("Connect TronLink Pro (demo)");
-      }
+      alert("Wallet terhubung!\n\nAlamat contoh:\nTQx...BossXPro");
+      document.getElementById('addressDisplay').textContent = "TQx...BossXPro";
     }
 
-    function showSendModal() {
-      alert("Fitur Send (mirip TronLink Pro)\nPilih aset → Masukkan alamat → Jumlah");
-    }
-
-    function showReceiveModal() {
-      if (currentAddress) {
-        alert("Alamat Receive:\n" + currentAddress + "\n\n(Scan QR di aplikasi nyata)");
-      } else {
-        alert("Hubungkan wallet dulu!");
-      }
-    }
-
-    function setActiveNav(n) {
-      document.querySelectorAll('.nav-item').forEach((el,i) => {
-        el.classList.toggle('text-yellow-400', i === n);
-        el.classList.toggle('text-gray-400', i !== n);
-      });
-    }
+    function showSend() { alert("Halaman Send (mirip TronLink Pro)"); }
+    function showReceive() { alert("Scan QR atau copy alamat untuk menerima"); }
 
     window.onload = () => {
       renderAssets();
-      setActiveNav(0);
     };
   </script>
 </body>
