--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <style>
     body { font-family: 'Inter', system-ui, sans-serif; max-width: 420px; margin: 0 auto; }
     .asset-logo { width: 48px; height: 48px; object-fit: contain; border-radius: 12px; }
+    .header-logo { width: 32px; height: 32px; object-fit: contain; border-radius: 8px; }
   </style>
 </head>
 <body class="bg-gray-950 text-white min-h-screen pb-20">
 
-  <!-- Header -->
+  <!-- Header dengan Logo BossX -->
   <header class="bg-gray-900 px-5 py-4 flex items-center justify-between border-b border-gray-800">
     <div class="flex items-center gap-3">
-      <div class="w-8 h-8 bg-yellow-500 rounded-2xl flex items-center justify-center text-black font-bold">B</div>
+      <img src="https://i.ibb.co/Jj9MPHck/logo.jpg" class="header-logo" alt="BossX Logo">
       <h1 class="text-xl font-bold">BossX Wallet Pro</h1>
     </div>
     <button onclick="connectWallet()" class="text-sm bg-blue-600 hover:bg-blue-700 px-5 py-2 rounded-2xl">Connect</button>
@@ -95,7 +96,7 @@
     const assets = [
       { name: "TRX", logo: "https://cryptologos.cc/logos/tron-trx-logo.png", balance: "124.85", usd: "18.72" },
       { name: "USDT", logo: "https://cryptologos.cc/logos/tether-usdt-logo.png", balance: "245.00", usd: "245.00" },
-      { name: "BossX", logo: "https://i.ibb.co.com/Jj9MPHck/logo.jpg", balance: "12,450", usd: "124.50" },
+      { name: "BossX", logo: "https://i.ibb.co/Jj9MPHck/logo.jpg", balance: "12,450", usd: "124.50" },
       { name: "BTC", logo: "https://cryptologos.cc/logos/bitcoin-btc-logo.png", balance: "0.0042", usd: "248.30" },
       { name: "SOL", logo: "https://cryptologos.cc/logos/solana-sol-logo.png", balance: "8.75", usd: "142.60" }
     ];
