--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
                                 <p class="text-xs text-green-400 mt-1">Available balance</p>
                             </div>
                         </div>
-                        <!-- Log Engine Masternode -->
+                        <!-- Log Engine MasterXcloud -->
                         <div id="log-engine" class="bg-gray-900 border border-amber-500/20 rounded-xl p-4 mt-6 relative overflow-hidden log-engine">
                             <!-- Border Lines Gold -->
                             <div class="border-line-gold border-top-gold"></div>
@@ -1276,7 +1276,7 @@
                             <div class="border-line-gold border-bottom-gold"></div>
                             <div class="border-line-gold border-left-gold"></div>
                             <div class="flex justify-between items-center mb-3">
-                                <h3 class="text-lg font-semibold text-amber-400">Log Engine Masternode</h3>
+                                <h3 class="text-lg font-semibold text-amber-400">Log Engine MasterXcloud</h3>
                                 <button id="clear-log" class="px-3 py-1 bg-red-600 hover:bg-red-700 text-white rounded-lg text-sm transition-colors">
                                     Clear Log
                                 </button>
