--- a/index.html
+++ b/index.html
@@ -41,29 +41,23 @@ body { background:#000; color:#fff; overflow-x:hidden; }
         </nav>
     </div>
 
-    <!-- Main Area -->
+    <!-- Main -->
     <div class="flex-1 flex flex-col">
-        <!-- HEADER YANG SUDAH DIPERBAIKI -->
+        <!-- Header -->
         <header class="bg-gradient-to-r from-gray-900 via-black to-gray-900 border-b border-amber-500/20 px-6 h-16 flex items-center">
             <div class="flex items-center justify-between w-full">
-                <!-- Jam & Tanggal -->
                 <div class="flex flex-col">
                     <div id="time" class="text-amber-400 text-lg font-bold">00:00:00</div>
                     <div id="date" class="text-gray-400 text-xs">Loading...</div>
                 </div>
-                <!-- Search -->
                 <div class="flex-1 max-w-md mx-8">
                     <div class="relative">
                         <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 w-4 h-4"></i>
-                        <input type="text" placeholder="Cari node atau mesin..." 
-                               class="w-full pl-10 pr-4 py-2 bg-gray-800 border border-gray-700 rounded-xl text-sm focus:border-amber-500 focus:outline-none">
+                        <input type="text" placeholder="Cari node atau mesin..." class="w-full pl-10 pr-4 py-2 bg-gray-800 border border-gray-700 rounded-xl text-sm focus:border-amber-500">
                     </div>
                 </div>
-                <!-- Right side -->
                 <div class="flex items-center gap-4">
-                    <a href="#" class="flex items-center gap-2 px-3 py-1 bg-green-500/10 rounded-xl border border-green-500/20 text-green-400 text-sm">
-                        <i data-lucide="globe" class="w-4 h-4"></i> Market Open
-                    </a>
+                    <a href="#" class="flex items-center gap-2 px-3 py-1 bg-green-500/10 rounded-xl border border-green-500/20 text-green-400 text-sm"><i data-lucide="globe" class="w-4 h-4"></i> Market Open</a>
                     <button class="relative text-gray-400 hover:text-amber-400 p-2"><i data-lucide="bell" class="w-5 h-5"></i><span class="absolute -top-1 -right-1 bg-red-500 text-[10px] w-4 h-4 flex items-center justify-center rounded-full">3</span></button>
                     <div class="flex items-center gap-3 pl-4 border-l border-gray-700">
                         <div class="profile-picture w-8 h-8 rounded-full overflow-hidden"><img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="Fery"></div>
@@ -73,29 +67,17 @@ body { background:#000; color:#fff; overflow-x:hidden; }
             </div>
         </header>
 
-        <!-- Content -->
-        <main class="flex-1 overflow-auto p-6">
+        <main class="flex-1 overflow-auto p-8">
             <div id="key-node-page" class="page-content active">
-                <!-- Hero -->
-                <div class="text-center mb-12">
-                    <div class="inline-flex bg-amber-500/10 text-amber-400 px-6 py-3 rounded-full text-sm font-medium mb-6">
-                        <i data-lucide="zap" class="w-5 h-5 mr-2"></i> READY STOCK • GARANSI 1 TAHUN • COD JAKARTA
-                    </div>
-                    <h1 class="text-5xl font-bold mb-2">Mesin Mining BossX Pro</h1>
-                    <p class="text-2xl text-gray-300">13 GPU • Hemat Listrik • Profit Tinggi</p>
-                </div>
-
-                <!-- 4 GAMBAR ATAS -->
-                <h2 class="text-2xl font-bold mb-6 text-center">Galeri Atas</h2>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-12">
+                <!-- 4 GAMBAR ATAS (tanpa tulisan) -->
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-10">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 1">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 2">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 3">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 4">
                 </div>
 
-                <!-- 4 GAMBAR BAWAH -->
-                <h2 class="text-2xl font-bold mb-6 text-center">Galeri Bawah</h2>
+                <!-- 4 GAMBAR BAWAH (tanpa tulisan) -->
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 5">
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 6">
@@ -103,8 +85,8 @@ body { background:#000; color:#fff; overflow-x:hidden; }
                     <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 8">
                 </div>
 
-                <!-- Tombol -->
-                <div class="mt-12 flex justify-center gap-6">
+                <!-- Tombol Beli -->
+                <div class="mt-12 flex justify-center">
                     <button onclick="beliMesin()" class="action-button text-xl px-12 py-6 rounded-3xl flex items-center gap-4">
                         <i data-lucide="shopping-cart" class="w-7 h-7"></i> BELI SEKARANG - Rp 12.500.000
                     </button>
